# mtl-rust-back

./: .env  .gitignore  Cargo.toml  readme.md
.github/workflows/: integ.yml  rust.yml
doc/: db_schema.vsdx
migrations/2023-04-09-183943_create_tables/: down.sql  up.sql
src/: db.rs  main.rs
src/beans/: chapter_lightbean.rs  comment_lightbean.rs  mod.rs  novel_with_short_chapters.rs  page_response.rs  pageable.rs  recent_chapter.rs  search_query.rs
src/controllers/: chapter.rs  comment.rs  mod.rs  novel.rs
src/models/: bookmark.rs  chapter.rs  comment.rs  genre.rs  mod.rs  novel.rs  novel_genre.rs  review.rs  review_user_liked.rs  user.rs
src/schema/: schema.rs
src/services/: chapter_service.rs  comment_service.rs  mod.rs  novel_service.rs
