[package]
name = "mtl-rust-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-validator = "5.0.1"
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.1.0", features = ["mysql", "r2d2", "chrono"] }
dotenvy = "0.15"
log = "0.4"
env_logger = "0.10"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.1"
validator = { version = "0.16", features = ["derive"] }
